[package]
name = "panopticon"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow="1"
env_logger="0.9"
log="0.4"
eframe="0.20"
image="0.24"

[dependencies.windows]
version = "0.43"
features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Media_Audio",
    "Win32_Media_Audio_Endpoints",
    "Win32_System_Com_StructuredStorage"
]


[build-dependencies]
winres = "0.1"